prototypes/p5b/tests/invalid/19_mock_non_service.hll
// INVALID: cannot mock a struct (only services are mockable)
module apptest

struct Config {
    String name
}

test "mock non-service" {
    mock Config {
        function name() -> String {
            "fake"
        }
    }
}
